[gd_scene load_steps=6 format=3 uid="uid://dd8ntad3u5u7j"]

[ext_resource type="Script" uid="uid://c2x63bcqb1m43" path="res://scripts/multiplayer/MPSurvivor/mp_survivor_manager.gd" id="1_pku3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2shwl"]
size = Vector2(1000, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qv28o"]
size = Vector2(20, 1000)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hnwak"]
bg_color = Color(0, 0.47451, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kv8y1"]
bg_color = Color(0.0705882, 0.313726, 0.741176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MPSurvivor" type="Node"]
script = ExtResource("1_pku3p")

[node name="Arena" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Arena"]
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Border" type="StaticBody2D" parent="Arena"]
collision_mask = 0

[node name="Top" type="CollisionShape2D" parent="Arena/Border"]
position = Vector2(0, -500)
shape = SubResource("RectangleShape2D_2shwl")

[node name="Bottom" type="CollisionShape2D" parent="Arena/Border"]
position = Vector2(0, 500)
shape = SubResource("RectangleShape2D_2shwl")

[node name="Left" type="CollisionShape2D" parent="Arena/Border"]
position = Vector2(-500, 0)
shape = SubResource("RectangleShape2D_qv28o")

[node name="Right" type="CollisionShape2D" parent="Arena/Border"]
position = Vector2(500, 0)
shape = SubResource("RectangleShape2D_qv28o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HostPanel" type="Panel" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.0
offset_top = 10.0
offset_right = 159.0
offset_bottom = 110.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI/HostPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 118.0
offset_bottom = 36.0
text = "主机控制"

[node name="StartGameButton" type="Button" parent="UI/HostPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 310.0
offset_bottom = 90.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hnwak")
text = "开始游戏"

[node name="ConnectionPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 10.0
offset_right = 52.0
offset_bottom = 36.0
grow_horizontal = 2
text = "多人游戏连接"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HostButton" type="Button" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hnwak")
text = "创建游戏"

[node name="HSeparator" type="HSeparator" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2

[node name="AddressLabel" type="Label" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
text = "服务器地址"

[node name="AddressInput" type="LineEdit" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "输入IP地址"
clear_button_enabled = true

[node name="JoinButton" type="Button" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kv8y1")
text = "加入游戏"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://c58ywc27kp5rg", "uid://dim22dedbcv2q")
spawn_path = NodePath("../Arena")

[connection signal="pressed" from="UI/HostPanel/StartGameButton" to="." method="start_game"]
[connection signal="pressed" from="UI/ConnectionPanel/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/ConnectionPanel/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
